# orderbench

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  LICENSE-DATA  Makefile  README.md  README_REVIEW.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
orderbench/: __init__.py  _cli.py  harness.py  invariants.py  metrics.py  plots.py  report.py  runner.py
orderbench/mocks/: __init__.py  db.py  fs.py  lock.py
results/: model_manifest.json
results/apionly_claude/: results.json  rows.json
results/apionly_gpt/: results.json  rows.json
results/apionly_gpt2/: results.json  rows.json
results/claude_panel/: results.json  rows.json
results/demo/: results.json  rows.json
results/gpt2_instructed/: results.json  rows.json
results/gpt2_neutral/: results.json  rows.json
results/gpt_instructed/: results.json  rows.json
results/gpt_neutral/: results.json  rows.json
results/k3_claude_instructed/: results.json  rows.json
results/k3_claude_neutral/: results.json  rows.json
results/k3_deepseekcoder_instructed/: results.json  rows.json
results/k3_deepseekcoder_neutral/: results.json  rows.json
results/k3_dsv2_instructed/: results.json  rows.json
results/k3_dsv2_neutral/: results.json  (+1 more)
scripts/: ast_leak_detector.py  bootstrap_seed_tasks.py  make_2x2_table.py  make_ablation.py  make_ablation_fig.py  make_extended_tables.py  make_figures.py  make_headline.py  make_k3_table.py  make_repair_table.py  model_manifest.py  run_eval.py  run_repair.py  validate_all.py  validate_one.py  validity_bridge.py
tasks/: _schema.md
tests/: test_smoke.py
(+271 files in other folders)
